Add explicit version to project files, for AppVeyor patching

--- a/Legacy/Debugger/Legacy.Debugger.csproj
+++ b/Legacy/Debugger/Legacy.Debugger.csproj
@@ -9,6 +9,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <DefineConstants>VISUALIZER_DEBUGGEE;ANTLR_LEGACY</DefineConstants>
     <UseWPF>true</UseWPF>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
