--- a/Standard/Debugger/Standard.Debugger.csproj
+++ b/Standard/Debugger/Standard.Debugger.csproj
@@ -9,6 +9,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <DefineConstants>VISUALIZER_DEBUGGEE</DefineConstants>
     <UseWPF>true</UseWPF>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
