--- a/Test/Test.Standard/Test.Standard.csproj
+++ b/Test/Test.Standard/Test.Standard.csproj
@@ -25,13 +25,25 @@
     <PackageReference Include="ZSpitz.Util" Version="0.1.114" />
     <PackageReference Include="ZSpitz.Util.Wpf" Version="0.1.114" />
 
-    <Antlr4 Include="..\Test.Shared\Grammar\SQLiteLexer.g4">
+    <Antlr4 Include="..\Test.Shared\Grammars\SQLiteLexer.g4">
       <Listener>false</Listener>
       <Visitor>false</Visitor>
       <Package>ParseTreeVisualizer.Test</Package>
     </Antlr4>
 
-    <Antlr4 Include="..\Test.Shared\Grammar\SQLiteParser.g4">
+    <Antlr4 Include="..\Test.Shared\Grammars\SQLiteParser.g4">
+      <Listener>false</Listener>
+      <Visitor>false</Visitor>
+      <Package>ParseTreeVisualizer.Test</Package>
+    </Antlr4>
+
+    <Antlr4 Include="..\Test.Shared\Grammars\Java8Lexer.g4">
+      <Listener>false</Listener>
+      <Visitor>false</Visitor>
+      <Package>ParseTreeVisualizer.Test</Package>
+    </Antlr4>
+
+    <Antlr4 Include="..\Test.Shared\Grammars\Java8Parser.g4">
       <Listener>false</Listener>
       <Visitor>false</Visitor>
       <Package>ParseTreeVisualizer.Test</Package>
